<resources>
    <string name="app_name">Countries</string>
    <string name="country_flag">country flag</string>
    <string name="hint_country_search">Search country</string>
    <string name="sort">Sort</string>
    <string name="label_population">Population</string>
    <string name="label_area">Area</string>
    <string name="label_capital">Capital</string>
    <string name="action_open_in_maps">Open in maps</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_label_default">Default</string>
    <string name="Server_error_message">Server error, please check your internet connection!</string>
    <string name="Uknown_error">Unknown error, we are sorry for inconvenience</string>
    <string name="label_timezones">Timezones</string>
</resources>
