<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/grey"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default">

        <TextView
            android:id="@+id/label_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="@dimen/heading_one"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sort_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_area"
            android:textSize="@dimen/heading_three"
            app:layout_constraintTop_toBottomOf="@id/label_sort" />

        <TextView
            android:id="@+id/sort_alphabetical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/sort_alphabetical"
            android:textSize="@dimen/heading_three"
            app:layout_constraintTop_toBottomOf="@id/sort_area" />

        <TextView
            android:id="@+id/sort_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/sort_label_default"
            android:textSize="@dimen/heading_three"
            app:layout_constraintTop_toBottomOf="@id/sort_alphabetical" />

        <TextView
            android:id="@+id/sort_population"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_population"
            android:textSize="@dimen/heading_three"
            app:layout_constraintTop_toBottomOf="@id/sort_default" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
