<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="adapter"
            type="matej.lamza.countries.ui.details.CountryBordersAdapter" />

        <variable
            name="vm"
            type="matej.lamza.countries.ui.details.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/country_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder"
            android:translationZ="-10dp"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_card_height"
            android:backgroundTint="@color/offwhite"
            android:translationZ="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_medium">


                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{vm.countryInfo.name}"
                    android:textSize="@dimen/heading_two"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/flag"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="The United Kingdom Of Great Britan and Northern Ireland" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/flag"
                    setImage="@{vm.countryInfo.image}"
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:contentDescription="@string/country_flag"
                    app:layout_constraintBottom_toBottomOf="@id/country_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/flag" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/horizontal_constraint_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.33" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/horizontal_constraint_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.66" />

                <TextView
                    android:id="@+id/label_population"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:alpha="0.7"
                    android:gravity="center_horizontal"
                    android:text="@string/label_population"
                    app:layout_constraintEnd_toStartOf="@id/horizontal_constraint_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/country_name" />

                <TextView
                    android:id="@+id/population"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:text="@{vm.countryInfo.pop}"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/horizontal_constraint_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_population"
                    tools:text="377.00k" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@id/population"
                    app:layout_constraintStart_toEndOf="@id/label_population"
                    app:layout_constraintTop_toTopOf="@id/label_population" />

                <TextView
                    android:id="@+id/label_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:alpha="0.7"
                    android:gravity="center_horizontal"
                    android:text="@string/label_area"
                    app:layout_constraintEnd_toStartOf="@id/horizontal_constraint_two"
                    app:layout_constraintStart_toStartOf="@id/horizontal_constraint_one"
                    app:layout_constraintTop_toBottomOf="@id/country_name" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:text="@{vm.countryInfo.areaStr}"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/horizontal_constraint_two"
                    app:layout_constraintStart_toStartOf="@id/horizontal_constraint_one"
                    app:layout_constraintTop_toBottomOf="@id/label_area"
                    tools:text="377.00 km2" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@id/area"
                    app:layout_constraintStart_toEndOf="@id/label_area"
                    app:layout_constraintTop_toTopOf="@id/label_area" />

                <TextView
                    android:id="@+id/label_capital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:alpha="0.7"
                    android:gravity="center_horizontal"
                    android:text="@string/label_capital"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/horizontal_constraint_two"
                    app:layout_constraintTop_toBottomOf="@id/country_name" />

                <TextView
                    android:id="@+id/capitals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_small"
                    android:text="@{vm.countryInfo.capital}"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/horizontal_constraint_two"
                    app:layout_constraintTop_toBottomOf="@id/label_capital"
                    tools:text="Bloemfontein, Cape Town, Pretoria" />

                <TextView
                    android:id="@+id/label_borders"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_horizontal"
                    android:text="Borders"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/capitals" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/borders"
                    shouldBeGone="@{vm.countryInfo.borders == null}"
                    submitList="@{vm.countryInfo.borders}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:adapter="@{adapter}"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/label_borders"
                    tools:listitem="@layout/item_country_border" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/borders" />

                <TextView
                    android:id="@+id/label_timezones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/label_timezones"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/timezones"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@{vm.countryInfo.timezone}"
                    app:layout_constraintBottom_toBottomOf="@id/label_timezones"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_timezones"
                    app:layout_constraintTop_toTopOf="@id/label_timezones"
                    tools:text="UTC+01:00 - UTC+06:00" />

                <Button
                    android:id="@+id/btn_navigate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/action_open_in_maps"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/timezones" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
